--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,34 @@
 [project]
 name = "sprout"
 version = "0.1.0"
-description = ""
+description = "Interactive project generator"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = ["jinja2>=3.0", "prompt-toolkit>=3.0.52", "rich>=13"]
-classifiers = []
-keywords = []
+classifiers = [
+    "Intended Audience :: Developers",
+    "Environment :: Console",
+    "License :: OSI Approved :: MIT License",
+    "Operating System :: OS Independent",
+    "Programming Language :: Python",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3 :: Only",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
+    "Topic :: Software Development",
+    "Topic :: Software Development :: Code Generators",
+    "Topic :: Utilities",
+]
+keywords = [
+    "scaffold",
+    "project generator",
+    "templates",
+    "jinja2",
+    "cli",
+    "prompt-toolkit",
+    "rich",
+    "boilerplate",
+]
 
 [project.scripts]
 sprout = "sprout.cli:main"
