--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "sprout"
 version = "0.1.0"
-description = "Interactive project generator"
+description = "A Jinja2 project generator with Python-based configuration"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = ["jinja2>=3.0", "prompt-toolkit>=3.0.52", "rich>=13"]
