Python 3.14 support, pyproject.toml and CI modernization

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,8 @@
 name = "sprout"
 version = "0.1.0"
 description = "A Jinja2 project generator with Python-based configuration"
+authors = [{ name = "zigai", email = "ziga.ivansek@gmail.com" }]
+license = { file = "LICENSE" }
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = ["jinja2>=3.0", "prompt-toolkit>=3.0.52", "rich>=13"]
@@ -19,38 +21,67 @@ classifiers = [
     "Topic :: Software Development :: Code Generators",
     "Topic :: Utilities",
 ]
-keywords = [
-    "scaffold",
-    "project generator",
-    "templates",
-    "jinja2",
-    "cli",
-    "prompt-toolkit",
-    "rich",
-    "boilerplate",
-]
 
-[project.scripts]
-sprout = "sprout.cli:main"
+keywords = ["sprout"]
 
 [project.optional-dependencies]
-test = ["pytest"]
+test = ["pytest", "coverage"]
+dev = ["pytest", "coverage", "ruff", "pre-commit", "mypy", "codespell"]
 
 [project.urls]
 Repository = "https://github.com/zigai/sprout"
 Issues = "https://github.com/zigai/sprout/issues"
 Homepage = "https://github.com/zigai/sprout"
 
+[project.scripts]
+sprout = "sprout.cli:main"
+
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
+[tool.hatch.envs.test]
+features = ["test"]
+installer = "uv"
+
+[[tool.hatch.envs.test.matrix]]
+python = ["3.12", "3.13"]
+
+[tool.hatch.envs.test.scripts]
+test = "pytest {args}"
+cov = "coverage run -m pytest {args}"
+
 [tool.hatch.build.targets.wheel]
 packages = ["sprout"]
 
-[tool.black]
-line-length = 100
-target_version = ['py312', 'py313']
+[tool.coverage.run]
+source = ["sprout"]
+branch = true
+
+[tool.coverage.report]
+exclude_lines = [
+    'pragma: no cover',
+    'raise NotImplementedError',
+    'if TYPE_CHECKING:',
+    'if typing.TYPE_CHECKING:',
+]
+omit = ["tests/*", "tests/**"]
+
+[tool.mypy]
+python_version = "3.12"
+files = ["sprout"]
+exclude = ["^tests/"]
+
+disallow_untyped_defs = true
+disallow_untyped_calls = true
+disallow_any_generics = true
+no_implicit_optional = true
+warn_unused_ignores = true
+warn_redundant_casts = true
+warn_return_any = true
+warn_unused_configs = true
+strict_equality = true
+ignore_missing_imports = true
 
 [tool.ruff]
 line-length = 100
@@ -65,13 +96,13 @@ select = [
     'YTT',     # flake8-2020
     'B',       # flake8-bugbear
     "PLE",     # pylint
-    'PYI006',  # flake8-pyi
-    'PYI019',  # flake8-pyi
-    'PYI024',  # flake8-pyi
-    'PYI030',  # flake8-pyi
-    'PYI062',  # flake8-pyi
-    'PYI063',  # flake8-pyi
-    'PYI066',  # flake8-pyi
+    'PYI006',
+    'PYI019',
+    'PYI024',
+    'PYI030',
+    'PYI062',
+    'PYI063',
+    'PYI066',
     "RUF001",
     "RUF002",
     "RUF003",
@@ -124,35 +155,8 @@ ignore = [
     "N806",
     "UP007",
     "UP038",
-    "E741",
 ]
-isort = { known-first-party = ["sprout"] }
-pydocstyle = { convention = 'google' }
-
-exclude = [
-    ".bzr",
-    ".direnv",
-    ".eggs",
-    ".git",
-    ".hg",
-    ".mypy_cache",
-    ".nox",
-    ".pants.d",
-    ".pytype",
-    ".ruff_cache",
-    ".svn",
-    ".tox",
-    ".venv",
-    "__pypackages__",
-    "_build",
-    "buck-out",
-    "build",
-    "dist",
-    "node_modules",
-    "venv",
-    "tests/*",
-    "tests/**/*",
-]
+exclude = ["build", "tests/**"]
 
 [tool.ruff.lint.per-file-ignores]
 "__init__.py" = [
@@ -164,14 +168,13 @@ exclude = [
 quote-style = "double"
 indent-style = "space"
 skip-magic-trailing-comma = false
-line-ending = "auto"
+line-ending = "lf"
 
-[tool.hatch.envs.test]
-features = ["test"]
-installer = "uv"
+[tool.ruff.lint.isort]
+known-first-party = ["sprout", "tests"]
 
-[[tool.hatch.envs.test.matrix]]
-python = ["3.12", "3.13"]
+[tool.ruff.lint.pydocstyle]
+convention = "google"
 
-[tool.hatch.envs.test.scripts]
-test = "pytest -v"
+[tool.codespell]
+skip = '.git,uv.lock'
